--- a/src/modules/download/components/FileViewer/styles.module.scss
+++ b/src/modules/download/components/FileViewer/styles.module.scss
@@ -41,7 +41,7 @@
     right: calc(100% + 10px);
     display: flex;
     flex-direction: column;
-    gap: 5px;
+
 
     @media (max-width: 992px) {
       position: relative;
@@ -54,10 +54,12 @@
       width: 35px;
       height: 35px;
       border-radius: 5px;
+      margin: 2.5px;
       border: 1px solid var(--color-grey-300);
       background-color: var(--color-white);
       color: var(--color-grey-500);
       cursor: pointer;
+      display: block;
 
       &:disabled {
         opacity: 0.5;
